--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "npm index.js"
+    "start": "npm index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
